--- a/locales/en-CA.json
+++ b/locales/en-CA.json
@@ -5,15 +5,21 @@
 		"addPhone": "Add falback phone number",
 		"clearPhoneConfirm": "Are you sure you want to clear the phone number?",
 		"clearPhoneTitle": "Clear phone number",
-		"codesRemaining": "codes remaining.",
+		"copy": "Copy",
 		"deactivate": "Deactivate",
 		"deactivateConfirmation": "Are you sure you want to deactivate Two Factor Authentication?",
 		"deactivateTitle": "Deactivate Two Factor Authentication",
-		"fallback": "Fallback SMS snumber",
+		"download": "Download",
+		"fallback": "Fallback SMS number",
 		"forgetMachine": "Forget this device. You will be asked for a two-factor code at next login.",
 		"hideCodes": "Hide codes",
 		"inactive": "Two-factor authentication is inactive",
 		"instructions": "Two-factor authentication adds an additional layer of security to your account by requiring more than just a password to sign in",
+		"recoveryCodesInstructions": "Recovery codes can be used to access your account in the event you lose access to your device and cannot receive two-factor authentication codes",
+		"recoveryCodesWarning": "Treat your recovery codes with the same level of attention as you would your password!",
+		"resetCodes": "Reset codes",
+		"resetCodesWarning": "When you generate new recovery codes, you must download or copy the new codes. Your old codes won’t work anymore.",
+		"revoveryCodes": "Recovery codes",
 		"showCodes": "Show codes",
 		"title": "Two-factor authentication"
 	},
