--- a/locales/fr-CA.json
+++ b/locales/fr-CA.json
@@ -5,15 +5,21 @@
 		"addPhone": "Ajouter un no. de téléphone de secours",
 		"clearPhoneConfirm": "Voulez-vous vraiment effacer le numéro de téléphone ?",
 		"clearPhoneTitle": "Effacer le numéro de téléphone",
-		"codesRemaining": "codes restants.",
+		"copy": "Copier",
 		"deactivate": "Désactiver",
 		"deactivateConfirmation": "Voulez-vous vraiment désactiver l'authentification à deux facteurs ?",
 		"deactivateTitle": "Désactiver l'authentification à deux facteurs",
+		"download": "Télécharger",
 		"fallback": "No. SMS de secours",
 		"forgetMachine": "Oubliez cet appareil. Un code à deux facteurs vous sera demandé lors de la prochaine connexion.",
 		"hideCodes": "Masquer les codes",
 		"inactive": "L'authentification à deux facteurs est inactive",
 		"instructions": "L'authentification à deux facteurs ajoute une couche de sécurité supplémentaire à votre compte en exigeant plus qu'un simple mot de passe pour vous connecter",
+		"recoveryCodesInstructions": "Les codes de récupération peuvent être utilisés pour accéder à votre compte si vous perdez l'accès à votre appareil et ne pouvez pas recevoir de codes d'authentification à deux facteurs",
+		"recoveryCodesWarning": "Traiter les codes de récupération avec le même niveau de sécurité que pour votre mot de passe!",
+		"resetCodes": "Réinitialiser les codes",
+		"resetCodesWarning": "Lorsque vous générez de nouveaux codes de récupération, vous devez télécharger ou copier les nouveaux codes. Vos anciens codes ne fonctionneront plus.",
+		"revoveryCodes": "Code de récupération",
 		"showCodes": "Afficher les codes",
 		"title": "Authentication à deux facteurs"
 	},
