--- a/locales/en-CA.json
+++ b/locales/en-CA.json
@@ -11,10 +11,12 @@
 		"deactivateTitle": "Deactivate Two Factor Authentication",
 		"download": "Download",
 		"fallback": "Fallback SMS number",
-		"forgetMachine": "Forget this device. You will be asked for a two-factor code at next login.",
+		"forgetMachine": "Forget",
+		"forgetMachineInstructions": "You will be asked for a two-factor code at next login.",
 		"hideCodes": "Hide codes",
 		"inactive": "Two-factor authentication is inactive",
 		"instructions": "Two-factor authentication adds an additional layer of security to your account by requiring more than just a password to sign in",
+		"machineRemembered": "This device is remembered. No 2FA code will be asked.",
 		"recoveryCodesInstructions": "Recovery codes can be used to access your account in the event you lose access to your device and cannot receive two-factor authentication codes",
 		"recoveryCodesWarning": "Treat your recovery codes with the same level of attention as you would your password!",
 		"resetCodes": "Reset codes",
