--- a/locales/fr-CA.json
+++ b/locales/fr-CA.json
@@ -11,10 +11,12 @@
 		"deactivateTitle": "Désactiver l'authentification à deux facteurs",
 		"download": "Télécharger",
 		"fallback": "No. SMS de secours",
-		"forgetMachine": "Oubliez cet appareil. Un code à deux facteurs vous sera demandé lors de la prochaine connexion.",
+		"forgetMachine": "Oublier",
+		"forgetMachineInstructions": "Un code à deux facteurs vous sera demandé lors de la prochaine connexion.",
 		"hideCodes": "Masquer les codes",
 		"inactive": "L'authentification à deux facteurs est inactive",
 		"instructions": "L'authentification à deux facteurs ajoute une couche de sécurité supplémentaire à votre compte en exigeant plus qu'un simple mot de passe pour vous connecter",
+		"machineRemembered": "Cet appareil est gardé en rappel. Aucun code 2FA ne vous sera demandé.",
 		"recoveryCodesInstructions": "Les codes de récupération peuvent être utilisés pour accéder à votre compte si vous perdez l'accès à votre appareil et ne pouvez pas recevoir de codes d'authentification à deux facteurs",
 		"recoveryCodesWarning": "Traiter les codes de récupération avec le même niveau de sécurité que pour votre mot de passe!",
 		"resetCodes": "Réinitialiser les codes",
