--- a/locales/en-CA.json
+++ b/locales/en-CA.json
@@ -98,6 +98,7 @@
 		"submit": "Verify",
 		"title": "Configure authenticator"
 	},
+	"error": "Error",
 	"errorMessage": {
 		"exception": "An unexpected error has occurred",
 		"invalidEmail": "Email is invalid",
